# outbox-pattern-processor

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  rustfmt.toml
database/: README.md
database/migrations/: 1_outbox_pattern_table.sql
lib/: Cargo.toml  README.md
lib/src/: app_state.rs  error.rs  http_gateway.rs  http_notification_service.rs  lib.rs  notification.rs  outbox.rs  outbox_cleaner_schedule.rs  outbox_destination.rs  outbox_group.rs  outbox_private_repository.rs  outbox_processor.rs  outbox_repository.rs  outbox_resources.rs  shutdown.rs  sns_notification_service.rs  sqs_destination.rs  sqs_notification_service.rs
lib/src/domain/: notification.rs  outbox.rs
lib/src/domain/destination/: mod.rs
lib/src/infra/: database.rs  http_gateway.rs  mod.rs
lib/src/repository/: outbox.rs
lib/src/service/: http_notification_service.rs  sns_notification_service.rs  sqs_notification_service.rs
lib/tests/: commons.rs  switch_case.rs
src/: lib.rs  outbox_processor.rs  routes.rs  state.rs
src/domain/: mod.rs
src/domain/destination/: http_destination.rs  outbox_destination.rs  sns_destination.rs
src/infra/: aws.rs  axum.rs  environment.rs  error.rs  mod.rs
src/repository/: outbox.rs
src/service/: http_notification_service.rs  mod.rs  sns_notification_service.rs  sqs_notification_service.rs
tests/: commons.rs  switch_case.rs
worker/: Cargo.toml  Dockerfile  README.md
worker/src/: lib.rs  routes.rs  state.rs
worker/src/controller/health/: routes.rs
worker/src/infra/: database.rs  error.rs
