[package]
name = "outbox-pattern-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
wg = { version = "0.9.1" }
tokio = { version = "1.39.3", features = ["full"] }
tokio-stream = { version = "0.1.15" }
tower-http = { version = "0.5.2", features = ["catch-panic", "auth", "sensitive-headers"] }
hyper = { version = "1.4.1" }
axum = { version = "0.7.5", features = ["macros", "http2"] }

tracing = { version = "0.1.40" }
tracing-serde = { version = "0.1.3" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18" , features = ["env-filter"]}
axum-tracing-opentelemetry = { version = "0.19.0" }

aws-sdk-sqs = { version = "1.39.0" }
aws-sdk-sns = { version = "1.40.0" }
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }

reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = { version = "0.3.3" }
reqwest-tracing = { version = "0.5.3", features = ["opentelemetry_0_24"] }

serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["preserve_order"] }

sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal", "migrate"] }
uuid = { version = "1.10.0", features = ["v4", "v7", "serde"] }
regex = { version = "1.10.6" }

[dev-dependencies]
rand = { version = "0.8.5" }
serial_test = { version = "3.1.1" }

test-context = { version = "0.3.0" }
tower = { version = "0.5.0", features = ["util"] }

wiremock = { version = "0.6.1" }

[profile.release]
incremental = true
strip = "debuginfo"