[package]
name = "outbox-pattern-processor"
version = "0.2.3"
edition = "2021"
authors = [
    "Diogo Deroldo <diogoderoldo@gmail.com>"
]
license = "MIT"
description = "Library to make easier to dispatch your outbox-pattern data from database to SQS, SNS and/or HTTP(S) gateways"
readme = "README.md"
homepage = "https://github.com/deroldo/outbox-pattern-processor"
repository = "https://github.com/deroldo/outbox-pattern-processor"
keywords = ["outbox", "outbox-pattern", "outbox-table", "outbox-event"]
categories = ["web-programming"]

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
wg = { version = "0.9.1" }

tracing = { version = "0.1.40" }
tracing-serde = { version = "0.1.3" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18" , features = ["env-filter"]}

aws-sdk-sqs = { version = "1.44.0" }
aws-sdk-sns = { version = "1.45.0" }
aws-config = { version = "1.5.7", features = ["behavior-version-latest"] }

reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = { version = "0.3.3" }
reqwest-tracing = { version = "0.5.3", features = ["opentelemetry_0_24"] }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }

sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal", "migrate"] }
uuid = { version = "1.10.0", features = ["v4", "v7", "serde"] }
regex = { version = "1.11.0" }

[dev-dependencies]
rand = { version = "0.8.5" }
serial_test = { version = "3.1.1" }
test-context = { version = "0.3.0" }
wiremock = { version = "0.6.2" }
