[package]
name = "outbox-pattern-processor-worker"
edition = "2021"
authors = [
    "Diogo Deroldo <diogoderoldo@gmail.com>"
]
license = "MIT"
readme = "README.md"

[dependencies]
outbox-pattern-processor = { path = "../lib" }

tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.5", features = ["macros", "http2"] }
wg = { version = "0.9.1" }
tokio-stream = { version = "0.1.15" }
tower-http = { version = "0.6.1", features = ["catch-panic", "auth", "sensitive-headers"] }
hyper = { version = "1.4.1" }
axum-tracing-opentelemetry = { version = "0.21.1" }

tracing = { version = "0.1.40" }
tracing-serde = { version = "0.1.3" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18" , features = ["env-filter"]}

aws-sdk-sqs = { version = "1.39.0" }
aws-sdk-sns = { version = "1.40.0" }
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }

sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal", "migrate"] }

serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["preserve_order"] }
